# drs_server

./: .gitignore  .gitmodules  CMakeLists.txt  version.mk
sources/: eth_srv.c  eth_srv.h  main_cli.c  main_server.c  sig_unix_handler.c
sources/dap-sdk/: CMakeLists.txt
sources/dap-sdk/cmake/: Toolchain_host_Linux_target_armhf.cmake  Toolchain_host_Linux_target_armhf_linaro.cmake
sources/dap-sdk/modules/core/: CMakeLists.txt
sources/dap-sdk/modules/core/src/: dap_common.c
sources/dap-sdk/modules/crypto/include/: dap_uuid.h
sources/dap-sdk/modules/io/: CMakeLists.txt  dap_worker.c
sources/dap-sdk/modules/net/app-cli/: dap_app_cli_net.c
sources/drs/: CMakeLists.txt  calibrate.c  calibrate.h  commands.c  commands.h  data_operations.c  data_operations.h  drs.c  drs.h  eth_ops.c  eth_ops.h  mem_ops.c  mem_ops.h  minGlue.h  minIni.c  minIni.h
sources/tests/: ethernet_test.c  ethernet_test.h  memtest.c  memtest.h
